added some meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,12 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
     <title>blaketarter | Javascript Developer based in Kansas City, MO</title>
+    <meta name="theme-color" content="#f7931e" />
+    <meta name="description" content="Blake is a Javascript developer with 3+ years of experience planning, creating, and maintaining websites and various application platforms." />
+    <meta name="keywords" content="javascript, developer, dev, web, font-end, website, kansas city, react" />
   </head>
   <body>
     <div id="root"></div>
-
     <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('service-worker.js').catch(function(ex) {
