--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,29 @@
     <meta name="theme-color" content="#f7931e" />
     <meta name="description" content="Blake is a Javascript developer with 3+ years of experience planning, creating, and maintaining websites and various application platforms." />
     <meta name="keywords" content="javascript, developer, dev, web, font-end, website, kansas city, react" />
+    <meta property="og:title" content="blaketarter | Javascript Developer based in Kansas City, MO">
+    <meta property="og:description" content="Blake is a Javascript developer with 3+ years of experience planning, creating, and maintaining websites and various application platforms.">
+    <meta property="og:image" content="http://blaketarter.com/bt-favicon-192.png">
+    <meta property="og:url" content="http://blaketarter.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:site_name" content="blaketarter.com">
   </head>
   <body>
+    <noscript>
+      <h1>Hi, I'm Blake Tarter.</h1>
+      <p>A Kansas City based web developer</p>
+      <br />
+      <h2>About Me.</h2>
+      <p>Blake is a Javascript developer with 3+ years of experience planning, creating, and maintaining websites and various application platforms. Some technologies that he uses on a regular basis are React, Angular, and Ionic. His projects include client and consumer facing websites, as well as react-native and hybrid applications. He has experience working in a team environment, exceeds in time management skills, and strives to remain on the cutting-edge of the front-end development scene.</p>
+      <br />
+      <h2>Find Me on the Internet.</h2>
+      <label>Github <a href="https://github.com/blaketarter">https://github.com/blaketarter</a></label>
+      <label>Codepen <a href="https://codepen.io/blaketarter/">https://codepen.io/blaketarter/</a></label>
+      <label>NPM <a href="https://www.npmjs.com/~blaketarter">https://www.npmjs.com/~blaketarter</a></label>
+      <label>Linkedin <a href="https://www.linkedin.com/in/blaketarter">https://www.linkedin.com/in/blaketarter</a></label>
+      <label>Twitter <a href="https://twitter.com/itsblaketarter">https://twitter.com/itsblaketarter</a></label>
+      <label>Medium <a href="https://medium.com/@itsblaketarter">https://medium.com/@itsblaketarter</a></label>
+    </noscript>
     <div id="root"></div>
     <script>
       if ('serviceWorker' in navigator) {
