--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="javascript, developer, dev, web, font-end, website, kansas city, react" />
     <meta property="og:title" content="blaketarter | Javascript Developer based in Kansas City, MO">
     <meta property="og:description" content="Blake is a Javascript developer with 3+ years of experience planning, creating, and maintaining websites and various application platforms.">
-    <meta property="og:image" content="https://blaketarter.com/bt-favicon-192.png">
+    <meta property="og:image" content="https://blaketarter.com/images/bt-favicon-192.png">
     <meta property="og:url" content="https://blaketarter.com">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="blaketarter.com">
